[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/torpedo/torpedo_black.png" type="Texture" id=1]
[ext_resource path="res://scenes/TrackingTorpedo.gd" type="Script" id=2]
[ext_resource path="res://assets/torpedo/torpedo_flame.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.9999
height = 48.0001

[sub_resource type="CircleShape2D" id=2]
radius = 355.141

[node name="TrackingTorpedo" type="Area2D" groups=["enemies"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Thrusters" type="Sprite" parent="."]
position = Vector2( 51, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
flip_h = true

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." groups=["enemies"]]
position = Vector2( 19, 0 )
scale = Vector2( 5.2, 1 )

[node name="TrackingZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackingZone"]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_TrackingTorpedo_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="TrackingZone" to="." method="_on_TrackingZone_area_entered"]
[connection signal="area_exited" from="TrackingZone" to="." method="_on_TrackingZone_area_exited"]
